tests/regression/baselines/test51_mutable_variants_fixed.expected
ERROR
SyntaxError: Unexpected token print
Note: expected tokens: ["(", "`", "begin", "{", r#"\"[^\\\\\"\\n\\r]*(?:\\\\[tn'\"\\\\][^\\\\\"\\n\\r]*)*\""#, r#"-?(?:0|[1-9][0-9]*)[eE]-?[0-9]+"#, r#"-?(?:0|[1-9][0-9]*)\\.[0-9]*(?:[eE]-?[0-9]+)?"#, r#"-?(?:[0-9]+)"#, r#"[A-Za-z_]\\w*"#]
Parse error occurred here:
// Test with pattern matching
match state_machine.state.current with
| `Idle _ -> print "idle"
             ^~~~~        
| `Running {speed} -> print "running at", speed
| `Stopped {reason} -> print "stopped:", reason;
